// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HoC for Vue 3 > curried > should create a curried version of createHOC 1`] = `
<div>
  Wrapped component, 123
</div>
`;

exports[`HoC for Vue 3 > preserve existing functionality of wrapped component > should pass attrs to the wrapped component 1`] = `
<div
  data-test="my-component"
>
  Wrapped component
</div>
`;

exports[`HoC for Vue 3 > preserve existing functionality of wrapped component > should pass props to the wrapped component 1`] = `
<div>
  Random value
</div>
`;

exports[`HoC for Vue 3 > preserve existing functionality of wrapped component > should pass slots to the wrapped component 1`] = `
<div>
  
  <div>
    Slot prop value: 123
  </div>
  
  
  <div>
    Default slot
  </div>
  
  
  Third slot fallback
  
</div>
`;

exports[`HoC for Vue 3 > preserve existing functionality of wrapped component > should pass slots to the wrapped component via template 1`] = `
<div>
  
  Slot prop value: 123
  
  
  <div>
    Default slot
  </div>
  
  
  Third slot fallback
  
</div>
`;

exports[`HoC for Vue 3 > preserve existing functionality of wrapped component > should render the wrapped component 1`] = `
<div>
  Wrapped component
</div>
`;

exports[`HoC for Vue 3 > render props > should be able to access "this" in individual props function 1`] = `
<div>
  Mounting value:Mounting value:Random Value
</div>
`;

exports[`HoC for Vue 3 > render props > should be able to access "this" in props function 1`] = `
<div>
  Mounting value:Mounting value:Random Value
</div>
`;

exports[`HoC for Vue 3 > render props > should override props when passing custom value to the wrapped component 1`] = `
<div>
  Random Value
</div>
`;

exports[`HoC for Vue 3 > render props > should override props when passing custom value to the wrapped component via props function 1`] = `
<div>
  Random Value
</div>
`;

exports[`HoC for Vue 3 > render props > should pass props to the wrapped component 1`] = `
<div>
  Random Value
</div>
`;

exports[`HoC for Vue 3 > render props > should pass props to the wrapped component via props function 1`] = `
<div>
  Random Value
</div>
`;

exports[`HoC for Vue 3 > render slots > should be able to access "this" in slots function 1`] = `
<div
  myprop="Mounting value"
>
  
  <span>
    Custom data: 123
  </span>
  
</div>
`;

exports[`HoC for Vue 3 > render slots > should override slot passed to the wrapped component 1`] = `
<div>
  
  Default slot from HoC
  
</div>
`;

exports[`HoC for Vue 3 > render slots > should pass a named scoped slot to the wrapped component 1`] = `
<div>
  
  Custom slot from HoC with customProp set to 123
  
</div>
`;

exports[`HoC for Vue 3 > render slots > should pass the slot to the wrapped component 1`] = `
<div>
  
  Default slot from HoC
  
</div>
`;
